demos/multi-team/team-a-version-2/app-repo/k8s_switch_to_v2/4_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app-a-route
  namespace: app-a
spec:
  hostnames:
  - app-a.endpoints.gateway-demos.cloud.goog
  parentRefs:
  - name: external-http-single-cluster
    namespace: single-cluster-gateway
  rules:
  - backendRefs:
    - name: app-a-service-version-1
      port: 80
      weight: 0
    - name: app-a-service-version-2
      port: 80
      weight: 1
